fix: viewport framing on ios safari

--- a/src/scss/loading.scss
+++ b/src/scss/loading.scss
@@ -7,8 +7,8 @@
     display: none;
     
     .shiny-busy & {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       background: transparent;
       display: block;
       position: fixed;
