--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -17,8 +17,8 @@
   @include panel('Map') {
     display: block;
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
