--- a/src/scss/search_results.scss
+++ b/src/scss/search_results.scss
@@ -19,7 +19,7 @@
     padding: 10px 5px;
     
     &.active {
-      max-height: 100vh;
+      max-height: 100%;
       overflow-y: scroll;
       display: flex;
       flex-direction: column;
